template:add-login

--- a/Wpf.Ui.SimpleDemo/Wpf.Ui.SimpleDemo.csproj
+++ b/Wpf.Ui.SimpleDemo/Wpf.Ui.SimpleDemo.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Wpf.Ui\Wpf.Ui.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Service Include="{3259aa49-8aa1-44d3-9025-a0b520596a8c}" />
+  </ItemGroup>
+
 </Project>
