--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ Wpf.Ui.sln
 Wpf.Ui.Tools.sln
 Wpf.Ui.SimpleDemo/Utils/Constants.cs
 /Wpf.Ui/bin/Debug
+/Wpf.Ui.Demo/bin/Debug
+/Wpf.Ui.Demo/obj/bin/Debug
+/Wpf.Ui.SimpleDemo/bin/Debug
+/Wpf.Ui.SimpleDemo/obj/bin/Debug
